--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,20 @@
 {
-    "name": "React-App",
-    "dockerComposeFile": [
-      "docker-compose.yml"
-    ],
-    "service": "app",
-    "workspaceFolder": "/app",
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "esbenp.prettier-vscode",
-          "dsznajder.es7-react-js-snippets"
-        ],
-        "settings": {
-          "editor.defaultFormatter": "esbenp.prettier-vscode"
-        }
+  "name": "react-practice",
+  "dockerComposeFile": [
+    "docker-compose.yml"
+  ],
+  "service": "app",
+  "workspaceFolder": "/react-practice",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "dsznajder.es7-react-js-snippets"
+      ],
+      "settings": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
       }
-    },
-    "postStartCommand": "yarn install && yarn start"
-  }
-  
+    }
+  },
+  "postStartCommand": "yarn install && yarn start"
+}
