--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "react-practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,8 +24,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-practice",
+      "react-practice/jest"
     ]
   },
   "browserslist": {
