--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,11 @@
 root: true
+parser: "@typescript-eslint/parser"
+plugins:
+  - "@typescript-eslint"
 extends:
-  - eslint: recommended
+  - eslint:recommended
+  - plugin:@typescript-eslint/recommended
+  - plugin:react/recommended
+  - plugin:react-hooks/recommended
+  - prettier
+rules: { react/react-in-jsx-scope: off }
