chore: :wrench: 拡張機能追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
       "extensions": [
         "esbenp.prettier-vscode",
         "dsznajder.es7-react-js-snippets",
-        "streetsidesoftware.code-spell-checker"
+        "streetsidesoftware.code-spell-checker",
+        "vivaxy.vscode-conventional-commits"
       ],
       "settings": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
