--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": { "source.organizeImports": "explicit" },
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
