--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-practice",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,16 +15,19 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.4.2",
     "typescript-eslint": "^8.2.0",
     "web-vitals": "^2.1.0"
